--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <!-- <app-navbar></app-navbar> -->
 <!-- <app-calculator></app-calculator> -->
 <!-- <router-outlet></router-outlet> -->
-<app-todoapp></app-todoapp>
+<!-- <app-todoapp></app-todoapp> -->
+<app-addtasktodoapp2></app-addtasktodoapp2>
