--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <!-- <app-heroes></app-heroes> -->
-<!-- <app-navbar></app-navbar> -->
+<app-navbar></app-navbar>
 <!-- <app-calculator></app-calculator> -->
-<!-- <router-outlet></router-outlet> -->
+
 <!-- <app-todoapp></app-todoapp> -->
-<app-addtasktodoapp2></app-addtasktodoapp2>
+<!-- <app-addtasktodoapp2></app-addtasktodoapp2> -->
+
+<!-- <app-sign-up-form></app-sign-up-form> -->
+
+<router-outlet></router-outlet>
