--- a/src/app/addtasktodoapp2/addtasktodoapp2.component.html
+++ b/src/app/addtasktodoapp2/addtasktodoapp2.component.html
@@ -1,45 +1,106 @@
 <div class="add-task px-5">
-	<div class="row">
-		<div class="col-md-12">
-			<div class="todo-heading bg-primary text-white  text-center">
-				<h2 class="font-weight-bold m-0 p-3">Welcome to Angular Todo App</h2>
-			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-12">
-			<div class="al-task text-center">
-				<div class="">
-				  <button type="button" class="btn btn-secondary mr-2"><i class="fa fa-list" aria-hidden="true"></i> All tasks</button>
-				  <button type="button" class="btn btn-danger mr-2" (click)="delete_selected_task(index1)"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete selected tasks</button>
-				  <button type="button" class="btn btn-danger mr-2" (click)="clearAllTasks()"><i class="fa fa-trash-o" aria-hidden="true"></i> Clear All tasks</button>
-				  <button type="button" class="btn btn-success"><i class="fa fa-check" aria-hidden="true"></i> Complete tasks</button>
-				</div>
-			</div>
-		</div>
-	</div>
+   <div class="row">
+      <div class="col-md-12">
+         <div class="todo-heading bg-primary text-white  text-center">
+            <h2 class="font-weight-bold m-0 p-3">
+               Welcome to Angular Todo App
+            </h2>
+         </div>
+      </div>
+   </div>
+   <div class="row">
+      <div class="col-md-12">
+         <div class="al-task text-center">
+            <div class="">
+               <button type="button" class="btn btn-secondary mr-2" (click)="showAllTask()">
+                  <i class="fa fa-list" aria-hidden="true"></i>
+                  All tasks
+               </button>
+               <button type="button" class="btn btn-danger mr-2" (click)="delete_selected_task(index1)">
+                  <i class="fa fa-trash-o" aria-hidden="true"></i>
+                  Delete selected tasks
+               </button>
+               <button type="button" class="btn btn-danger mr-2" (click)="clearAllTasks()">
+                  <i class="fa fa-trash-o" aria-hidden="true"></i>
+                  Clear All tasks
+               </button>
+               <button type="button" class="btn btn-success">
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  Complete tasks
+               </button>
+            </div>
+         </div>
+      </div>
+   </div>
 
+   <ul class="list-group" *ngIf="!allItemShow">
+      <li class="list-group-item pl-2" *ngFor="let item of tasks; let i = index">
+         <div class="custom-control custom-checkbox">
+            <input
+               type="checkbox"
+               class="custom-control-input"
+               (change)="deleteCheckedTask($event.target.checked, i)"
+               id="{{ i }}"
+            />
+            <label class="custom-control-label" for="{{ i }}">{{ item }}{{ i }}</label>
+         </div>
+         <i class="fa fa-trash-o" aria-hidden="true" (click)="deleteitem(i, refInputval)"></i>
+         <i class="fa fa-pencil" aria-hidden="true" (click)="editVal(i, refInputval)"></i>
+      </li>
+      <li class="list-group-item pl-2 text-center font-weight-bold p-5" *ngIf="!tasks.length">
+         Item Not Found
+      </li>
+   </ul>
 
-	<ul class="list-group">
-	  <li class="list-group-item pl-2" *ngFor="let item of tasks; index as index1">
-		<div  class="custom-control custom-checkbox">
-		  <input type="checkbox" class="custom-control-input" (change)="deleteCheckedTask($event.target.checked,index1)" id={{index1}}>
-		  <label  class="custom-control-label" for={{index1}}>{{ item }}</label>
-		</div>
-		<i class="fa fa-trash-o" aria-hidden="true" (click)="deleteitem(index1,refInputval)"></i>
-		<i class="fa fa-pencil" aria-hidden="true" (click)="editVal(index1,refInputval)"></i>
-	  </li>
-	  <li class="list-group-item pl-2 text-center font-weight-bold p-5" *ngIf="!tasks.length">Item Not Found</li>
-	</ul>
+   <ul class="list-group" *ngIf="allItemShow">
+      <li class="list-group-item pl-2" *ngFor="let item of showAlltasks; index as index1">
+         <div class="custom-control custom-checkbox">
+            <input
+               type="checkbox"
+               class="custom-control-input"
+               (change)="deleteCheckedTask($event.target.checked, index1)"
+               id="{{ index1 }}"
+            />
+            <label class="custom-control-label" for="{{ index1 }}">{{ item }}</label>
+         </div>
+         <i class="fa fa-trash-o" aria-hidden="true" (click)="deleteitem(index1, refInputval)"></i>
+         <i class="fa fa-pencil" aria-hidden="true" (click)="editVal(index1, refInputval)"></i>
+      </li>
+      <li class="list-group-item pl-2 text-center font-weight-bold p-5" *ngIf="!showAlltasks.length">
+         Item Not Found
+      </li>
+   </ul>
 
-
-	<form class="mt-3">
-		<div class="input-group mb-3">
-		  <input type="text"  [(ngModel)]="itemval" #refInputval name="textval" class="form-control rounded-0" placeholder="Enter your task...">
-		  <div class="input-group-append">
-		    <button  class="btn text-white btn-success rounded-0" type="button" id="button-addon2" (click)="additem(itemval,refInputval)" *ngIf="!buttonToggle">Add Task</button>
-		    <button class="btn text-white btn-warning rounded-0" type="button" id="button-addon2" (click)="updateValue(itemval,index)" *ngIf="buttonToggle">Update Task</button>
-		  </div>
-		</div>
-	</form>
+   <form class="mt-3">
+      <div class="input-group mb-3">
+         <input
+            type="text"
+            [(ngModel)]="itemval"
+            #refInputval
+            name="textval"
+            class="form-control rounded-0"
+            placeholder="Enter your task..."
+         />
+         <div class="input-group-append">
+            <button
+               class="btn text-white btn-success rounded-0"
+               type="button"
+               id="button-addon2"
+               (click)="additem(itemval, refInputval)"
+               *ngIf="!buttonToggle"
+            >
+               Add Task
+            </button>
+            <button
+               class="btn text-white btn-warning rounded-0"
+               type="button"
+               id="button-addon2"
+               (click)="updateValue(itemval, index)"
+               *ngIf="buttonToggle"
+            >
+               Update Task
+            </button>
+         </div>
+      </div>
+   </form>
 </div>
