--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,6 +20,9 @@
          <li class="nav-item">
             <a class="nav-link" routerLink="/todoapp2">TodoApp2</a>
          </li>
+         <li class="nav-item">
+            <a class="nav-link" routerLink="/gitinfo">GitInfo</a>
+         </li>
          <li class="nav-item dropdown">
             <a
                class="nav-link dropdown-toggle"
