--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
-   <a class="navbar-brand" href="#">Naseem</a>
+   <a class="navbar-brand text-white" href="#">Naseem</a>
    <button
       class="navbar-toggler"
       type="button"
@@ -15,17 +15,22 @@
    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
          <li class="nav-item active" routerLinkActive="current">
-            <a class="nav-link" routerLink="/calculator">Calculator <span class="sr-only">(current)</span></a>
+            <a class="nav-link text-white" routerLink="/calculator"
+               >Calculator <span class="sr-only">(current)</span></a
+            >
          </li>
          <li class="nav-item">
-            <a class="nav-link" routerLink="/todoapp2">TodoApp2</a>
+            <a class="nav-link text-white" routerLink="/todoapp2">TodoApp2</a>
          </li>
          <li class="nav-item">
-            <a class="nav-link" routerLink="/gitinfo">GitInfo</a>
+            <a class="nav-link text-white" routerLink="/gitinfo">GitInfo</a>
+         </li>
+         <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/weather">WeatherApp</a>
          </li>
          <li class="nav-item dropdown">
             <a
-               class="nav-link dropdown-toggle"
+               class="nav-link dropdown-toggle text-white"
                href="#"
                id="navbarDropdown"
                role="button"
@@ -42,9 +47,9 @@
                <a class="dropdown-item" href="#">Something else here</a>
             </div>
          </li>
-         <li class="nav-item">
+         <!-- <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-         </li>
+         </li> -->
       </ul>
       <form class="form-inline my-2 my-lg-0">
          <a routerLink="/signup" class="btn text-white rounded-2 btn-danger my-2 my-sm-0" type="button"
