--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,6 +28,9 @@
          <li class="nav-item">
             <a class="nav-link text-white" routerLink="/weather">WeatherApp</a>
          </li>
+         <li class="nav-item">
+            <a class="nav-link text-white" routerLink="/heroes">HeroesApp</a>
+         </li>
          <li class="nav-item dropdown">
             <a
                class="nav-link dropdown-toggle text-white"
