--- a/src/app/weather-app/weather-app.component.less
+++ b/src/app/weather-app/weather-app.component.less
@@ -11,12 +11,7 @@
  }
  
  .card-box {
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    background: #f2f2f2 no-repeat 100% / cover;
-    margin: 20px auto 0;
-    box-shadow: 0 1px 8px 5px rgba(0, 0, 0, 0.1);
+    margin: 10px auto 0;
  }
  .card-box img {
     height: 100px;
@@ -39,4 +34,11 @@
     font-weight: 700;
     text-transform: uppercase;
  }
- 
+ .cards-temp {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between
+}
+.cards-temp > div{
+   margin: 10px;
+}
