--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -1,265 +1,120 @@
 <div class="container register">
-   <div class="row">
-      <div class="col-md-3 register-left">
-         <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
-         <h3>Welcome</h3>
-         <p>You are 30 seconds away from earning your own money!</p>
-         <input type="submit" name="" value="Login" /><br />
-      </div>
-      <div class="col-md-9 register-right">
-         <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
-            <li class="nav-item">
-               <a
-                  class="nav-link active"
-                  id="home-tab"
-                  data-toggle="tab"
-                  href="#home"
-                  role="tab"
-                  aria-controls="home"
-                  aria-selected="true"
-                  >Employee</a
-               >
-            </li>
-            <li class="nav-item">
-               <a
-                  class="nav-link"
-                  id="profile-tab"
-                  data-toggle="tab"
-                  href="#profile"
-                  role="tab"
-                  aria-controls="profile"
-                  aria-selected="false"
-                  >Hirer</a
-               >
-            </li>
-         </ul>
-         <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-               <h3 class="register-heading">Apply as a Employee</h3>
-               <form [formGroup]="registerDetails" class="row register-form" (ngSubmit)="postData()">
-                  <div class="col-md-6">
-                     <div class="form-group">
-                        <input
-                           type="text"
-                           class="form-control"
-                           placeholder="First Name *"
-                           name="fname"
-                           formControlName="fname"
-                        />
-                        <p
-                           *ngIf="
-                              formfield.fname.invalid &&
-                              formfield.fname.dirty &&
-                              formfield.fname.errors.minlength
-                           "
-                           class="alert alert-danger m-0 py-1 px-2"
-                        >
-                           Enter minimum 10 character!
+    <div class="row">
+        <div class="col-md-3 register-left">
+            <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
+            <h3>Welcome</h3>
+            <p>You are 30 seconds away from earning your own money!</p>
+            <input type="submit" name="" value="Login" /><br />
+        </div>
+        <div class="col-md-9 register-right">
+            <form [formGroup]="registerDetails" class="row register-form" (ngSubmit)="postData()">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="First Name *" name="fname" formControlName="fname" />
+                        <p *ngIf="
+                           formfield.fname.invalid &&
+                           formfield.fname.dirty &&
+                           formfield.fname.errors.minlength
+                        " class="alert alert-danger m-0 py-1 px-2">
+                            Enter minimum 10 character!
                         </p>
-                     </div>
-                     <div class="form-group">
-                        <input
-                           type="text"
-                           class="form-control"
-                           placeholder="Last Name *"
-                           name="lname"
-                           formControlName="lname"
-                        />
-                        <p
-                           *ngIf="
-                              formfield.lname.invalid &&
-                              formfield.lname.dirty &&
-                              formfield.lname.errors.minlength
-                           "
-                           class="alert alert-danger m-0 py-1 px-2"
-                        >
-                           Enter minimum 10 character!
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Last Name *" name="lname" formControlName="lname" />
+                        <p *ngIf="
+                           formfield.lname.invalid &&
+                           formfield.lname.dirty &&
+                           formfield.lname.errors.minlength
+                        " class="alert alert-danger m-0 py-1 px-2">
+                            Enter minimum 10 character!
                         </p>
-                     </div>
-                     <div class="form-group">
-                        <input
-                           type="email"
-                           class="form-control"
-                           placeholder="Your Email *"
-                           name="email"
-                           formControlName="mail"
-                        />
-                        <p
-                           *ngIf="formfield.mail.invalid && formfield.mail.dirty && formfield.mail.errors.email"
-                           class="alert alert-danger m-0 py-1 px-2"
-                        >
-                           Please Enter email like: examle@gmail.com
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Your Email *" name="email" formControlName="mail" />
+                        <p *ngIf="formfield.mail.invalid && formfield.mail.dirty && formfield.mail.errors.email" class="alert alert-danger m-0 py-1 px-2">
+                            Please Enter email like: examle@gmail.com
                         </p>
-                     </div>
-                     <!-- <div class="form-group">
-                                <div class="maxl">
-                                    <label class="radio inline">
-                                        <input
-                                            type="radio"
-                                            name="gender"
-                                            value="male"
-                                            checked
-                                        />
-                                        <span> Male </span>
-                                    </label>
-                                    <label class="radio inline">
-                                        <input
-                                            type="radio"
-                                            name="gender"
-                                            value="female"
-                                        />
-                                        <span>Female </span>
-                                    </label>
-                                </div>
-                            </div> -->
-                  </div>
-                  <div class="col-md-6">
-                     <div class="form-group">
-                        <input
-                           type="text"
-                           required
-                           autocomplete="off"
-                           name="txtEmpPhone"
-                           class="form-control"
-                           placeholder="Your Phone *"
-                           name="phone"
-                           formControlName="mob"
-                        />
+                    </div>
+                    <!-- <div class="form-group">
+                              <div class="maxl">
+                                 <label class="radio inline">
+                                       <input
+                                          type="radio"
+                                          name="gender"
+                                          value="male"
+                                          checked
+                                       />
+                                       <span> Male </span>
+                                 </label>
+                                 <label class="radio inline">
+                                       <input
+                                          type="radio"
+                                          name="gender"
+                                          value="female"
+                                       />
+                                       <span>Female </span>
+                                 </label>
+                              </div>
+                           </div> -->
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <input type="text" required autocomplete="off" name="txtEmpPhone" class="form-control" placeholder="Your Phone *" name="phone" formControlName="mob" />
 
-                        <p
-                           *ngIf="
-                              formfield.mob.invalid && formfield.mob.dirty && formfield.mob.errors.minlength
-                           "
-                           class="alert alert-danger m-0 py-1 px-2"
-                        >
-                           minimum 10 digit required.
+                        <p *ngIf="
+                           formfield.mob.invalid && formfield.mob.dirty && formfield.mob.errors.minlength
+                        " class="alert alert-danger m-0 py-1 px-2">
+                            minimum 10 digit required.
                         </p>
-                        <p
-                           *ngIf="
-                              formfield.mob.invalid && formfield.mob.dirty && formfield.mob.errors.maxlength
-                           "
-                           class="alert alert-danger m-0 py-1 px-2"
-                        >
-                           max 10 digit required.
+                        <p *ngIf="
+                           formfield.mob.invalid && formfield.mob.dirty && formfield.mob.errors.maxlength
+                        " class="alert alert-danger m-0 py-1 px-2">
+                            max 10 digit required.
                         </p>
-                     </div>
-                     <div class="form-group">
-                        <input
-                           type="password"
-                           class="form-control"
-                           placeholder="Password *"
-                           name="pswd"
-                           formControlName="pswd"
-                        />
-                        <p
-                           *ngIf="
-                              formfield.pswd.invalid && formfield.pswd.dirty && formfield.pswd.errors.minlength
-                           "
-                           class="alert alert-danger m-0 py-1 px-2"
-                        >
-                           Enter minimum 8 character!
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" placeholder="Password *" name="pswd" formControlName="pswd" />
+                        <p *ngIf="
+                           formfield.pswd.invalid && formfield.pswd.dirty && formfield.pswd.errors.minlength
+                        " class="alert alert-danger m-0 py-1 px-2">
+                            Enter minimum 8 character!
                         </p>
-                        
-                     </div>
-                     <div class="form-group">
-                        <input
-                           type="password"
-                           class="form-control"
-                           placeholder="Confirm Password *"
-                           name="cpswd"
-                           formControlName="cpswd"
-                        />
-                        <p
-                           *ngIf="
-                              formfield.cpswd.invalid &&
-                              formfield.cpswd.dirty
-                           "
-                           class="alert alert-danger m-0 py-1 px-2"
-                        >
-                           Password not match !
-                        </p>
-                        <p
-                           *ngIf="
-                              formfield.cpswd.valid &&
-                              formfield.cpswd.dirty
-                           "
-                           class="alert alert-success m-0 py-1 px-2"
-                        >
-                           Password match !
-                        </p>
-                        
-                        <input
-                           class="btnRegister"
-                           type="submit"
-                           value="Register"
-                           [disabled]="!registerDetails.valid" (click)="validateForm()"
-                        />
-                     </div>
 
-                     <!-- <div class="form-group">
-                                <select class="form-control">
-                                    <option class="hidden" selected disabled
-                                        >Please select your Sequrity
-                                        Question</option
-                                    >
-                                    <option>What is your Birthdate?</option>
-                                    <option
-                                        >What is Your old Phone Number</option
-                                    >
-                                    <option>What is your Pet Name?</option>
-                                </select>
-                            </div> -->
-                  </div>
-               </form>
-            </div>
-            <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-               <h3 class="register-heading">Apply as a Hirer</h3>
-               <div class="row register-form">
-                  <div class="col-md-6">
-                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="First Name *" />
-                     </div>
-                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Last Name *" />
-                     </div>
-                     <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Email *" />
-                     </div>
-                     <div class="form-group">
-                        <input
-                           type="text"
-                           maxlength="10"
-                           minlength="10"
-                           class="form-control"
-                           placeholder="Phone *"
-                        />
-                     </div>
-                  </div>
-                  <div class="col-md-6">
-                     <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Password *" />
-                     </div>
-                     <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Confirm Password *" />
-                     </div>
-                     <div class="form-group">
-                        <select class="form-control">
-                           <option class="hidden" selected disabled
-                              >Please select your Sequrity Question</option
-                           >
-                           <option>What is your Birthdate?</option>
-                           <option>What is Your old Phone Number</option>
-                           <option>What is your Pet Name?</option>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" placeholder="Confirm Password *" name="cpswd" formControlName="cpswd" />
+                        <p *ngIf="
+                           formfield.cpswd.invalid &&
+                           formfield.cpswd.dirty
+                        " class="alert alert-danger m-0 py-1 px-2">
+                            Password not match !
+                        </p>
+                        <p *ngIf="
+                           formfield.cpswd.valid &&
+                           formfield.cpswd.dirty
+                        " class="alert alert-success m-0 py-1 px-2">
+                            Password match !
+                        </p>
+                    </div>
+
+                    <div class="form-group">
+                        <select class="form-control" (change)="setvalues($event)">
+                           <option class="hidden" selected disabled>Please select your Sequrity Question</option>
+                           <option value="birthcountry">What is your Birth country</option>
+                           <option value="birthDate">What is your Birth date?</option>
+                           <option value="birthPlace">What is Your Birth place </option>
                         </select>
-                     </div>
-                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="`Answer *" />
-                     </div>
-                     <input type="submit" class="btnRegister" value="Register" />
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
+                    </div>
+                    <div class="form-group" [ngSwitch]="choose">
+                        <input type="text" class="form-control" placeholder="Birth Country *" name="birthcountry" formControlName="birthcountry" *ngSwitchCase="birthcountry" />
+                        <input type="date" class="form-control" name="birthcountry" formControlName="birthdate" *ngSwitchCase="birthDate" />
+                        <input type="text" class="form-control" placeholder="Birth Place *" name="birthplace" formControlName="birthplace" *ngSwitchCase="birthPlace" />
+                        <div class="alert alert-default" *ngSwitchDefault>Wrong choice...</div>
+                    </div>
+                </div>
+
+                <input class="btnRegister" type="submit" value="Register" [disabled]="!registerDetails.valid" (click)="validateForm()" />
+            </form>
+        </div>
+    </div>
 </div>
