--- a/src/app/sign-up-form/sign-up-form.component.less
+++ b/src/app/sign-up-form/sign-up-form.component.less
@@ -107,3 +107,15 @@ input.ng-invalid.ng-touched {
 .form-control:focus {
     box-shadow: none;
 }
+.security-query > ul > li {
+    background:#fff;
+    padding: 5px 10px;
+    border-radius: 4px;
+}
+.security-query > ul > li:not(:last-child){
+    margin-bottom: 10px;
+}
+.security-query > ul{
+    padding: 10px;
+    background: #ddd;
+}
