--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -99,17 +99,19 @@
 
                     <div class="form-group">
                         <select class="form-control" (change)="setvalues($event)">
-                           <option class="hidden" selected disabled>Please select your Sequrity Question</option>
+                           <option class="hidden" value="" selected disabled>Please select your Sequrity Question</option>
                            <option value="birthcountry">What is your Birth country</option>
                            <option value="birthDate">What is your Birth date?</option>
                            <option value="birthPlace">What is Your Birth place </option>
                         </select>
                     </div>
-                    <div class="form-group" [ngSwitch]="choose">
-                        <input type="text" class="form-control" placeholder="Birth Country *" name="birthcountry" formControlName="birthcountry" *ngSwitchCase="birthcountry" />
-                        <input type="date" class="form-control" name="birthcountry" formControlName="birthdate" *ngSwitchCase="birthDate" />
-                        <input type="text" class="form-control" placeholder="Birth Place *" name="birthplace" formControlName="birthplace" *ngSwitchCase="birthPlace" />
-                        <div class="alert alert-default" *ngSwitchDefault>Wrong choice...</div>
+                    <div class="form-group security-query" [ngSwitch]="choose">
+                        <input type="text" class="form-control" autocomplete="off" placeholder="Birth Country *" name="birthcountry" formControlName="birthcountry" *ngSwitchCase="'birthcountry'" [(ngModel)]="selectCountry" />
+                        <ul class="list-inline">
+                            <li *ngFor="let item of country | filter:selectCountry">{{item.country}}</li>
+                        </ul>
+                        <input type="date" class="form-control" name="birthcountry" formControlName="birthdate" *ngSwitchCase="'birthDate'" />
+                        <input type="text" class="form-control" placeholder="Birth Place *" name="birthplace" formControlName="birthplace" *ngSwitchCase="'birthPlace'" />
                     </div>
                 </div>
 
