--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -106,7 +106,8 @@
                         </select>
                     </div>
                     <div class="form-group security-query" [ngSwitch]="choose">
-                        <input type="text" class="form-control" autocomplete="off" placeholder="Birth Country *" name="birthcountry" formControlName="birthcountry" *ngSwitchCase="'birthcountry'" [(ngModel)]="selectCountry" (click)="changeCountry()" />
+                        <input type="text" class="form-control" autocomplete="off" placeholder="Birth Country *" name="birthcountry" formControlName="birthcountry" *ngSwitchCase="'birthcountry'" [(ngModel)]="selectCountry" (click)="changeCountry()" #box (keyup.enter)="onEnter(box.value)"
+                        />
                         <ul class="list-inline" *ngIf="countryChange">
                             <li *ngFor="let item of country | filter:selectCountry;let i = index;" (click)="_selectcountry(item.country,i)">{{item.country}}</li>
                         </ul>
