--- a/src/app/sign-up-form/sign-up-form.component.less
+++ b/src/app/sign-up-form/sign-up-form.component.less
@@ -50,23 +50,23 @@
 }
 .register-left p {
     font-weight: lighter;
-    padding: 12%;
-    margin-top: -9%;
+    padding: 6%;
+    margin-top: -4%;
 }
 .register .register-form {
-    padding: 10%;
-    margin-top: 10%;
+    padding: 3% 10%;
+    margin-top: 3%;
 }
 .btnRegister {
     float: right;
-    margin-top: 10%;
+    margin-top: 1%;
     border: none;
     border-radius: 1.5rem;
     padding: 2%;
     background: #0062cc;
     color: #fff;
     font-weight: 600;
-    width: 50%;
+    width: 100%;
     cursor: pointer;
 }
 .register .nav-tabs {
@@ -118,4 +118,9 @@ input.ng-invalid.ng-touched {
 .security-query > ul{
     padding: 10px;
     background: #ddd;
+}
+.form-data {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
 }
