--- a/src/app/githubinfo/githubinfo.component.html
+++ b/src/app/githubinfo/githubinfo.component.html
@@ -1,51 +1,40 @@
 <div class="github-details">
-   <div class="row">
-      <div class="col-md-12">
-         <div class="todo-heading bg-primary text-white  text-center">
-            <h2 class="font-weight-bold m-0 p-3">Welcome to Github User Profile</h2>
-         </div>
-      </div>
-   </div>
-   <form (submit)="submit(userProfile)">
-      <div class="form-group">
-         <div class="input-group mb-3 mt-3">
-            <input
-               class="form-control rounded-0"
-               [(ngModel)]="userProfile"
-               #profileRef
-               autofocus
-               name="usernames"
-               placeholder="Enter github username..."
-               type="text"
-            />
-            <div class="input-group-append">
-               <button
-                  class="btn text-white btn-success rounded-0"
-                  id="button-addon2"
-                  type="button"
-                  (click)="submit(userProfile, profileRef)"
-               >
+    <div class="row">
+        <div class="col-md-12">
+            <div class="todo-heading bg-primary text-white  text-center">
+                <h2 class="font-weight-bold m-0 p-3">Welcome to Github User Profile</h2>
+            </div>
+        </div>
+    </div>
+    <form (submit)="submit(userProfile)">
+        <div class="form-group">
+            <div class="input-group mb-3 mt-3">
+                <input class="form-control rounded-0" [(ngModel)]="userProfile" #profileRef autofocus name="usernames" placeholder="Enter github username..." type="text" />
+                <div class="input-group-append">
+                    <button class="btn text-white btn-success rounded-0" id="button-addon2" type="button" (click)="submit(userProfile, profileRef)">
                   Get Details
                </button>
+                </div>
+            </div>
+        </div>
+        <div class="card" style="width:400px" *ngIf="profile_show">
+            <div class="card-inner" *ngIf="!loader">
+                <div class="card-box">
+                    <img class="card-img-top" src="{{ avatar }}" alt="Card image" />
+                </div>
+                <div class="card-body text-center">
+                    <h5 class="card-title">
+                        <i class="fa fa-user" aria-hidden="true"></i> {{ myname }}
+                        <small><sup> ({{ profileTitle }})</sup></small
+                  >
+               </h5>
+               <h5><i class="fa fa-folder" aria-hidden="true"></i> Repositories: {{ mypublic_repos }}</h5>
+               <h5><i class="fa fa-user-plus" aria-hidden="true"></i> Followers: {{ myfollowers }}</h5>
+               <h5><i class="fa fa-tag" aria-hidden="true"></i> Following: {{ myfollowing }}</h5>
+               <a href="{{ myhtml_url }}" class="btn btn-primary mt-3">See Profile</a>
             </div>
          </div>
-      </div>
-      <div class="card" style="width:400px" *ngIf="profile_show">
-         <div class="card-box">
-            <img class="card-img-top" src="{{ avatar }}" alt="Card image" />
-         </div>
-         <div class="card-body text-center">
-            <h5 class="card-title">
-               <i class="fa fa-user" aria-hidden="true"></i> {{ myname }}
-               <small
-                  ><sup> ({{ profileTitle }})</sup></small
-               >
-            </h5>
-            <h5><i class="fa fa-folder" aria-hidden="true"></i> Repositories: {{ mypublic_repos }}</h5>
-            <h5><i class="fa fa-user-plus" aria-hidden="true"></i> Followers: {{ myfollowers }}</h5>
-            <h5><i class="fa fa-tag" aria-hidden="true"></i> Following: {{ myfollowing }}</h5>
-            <a href="{{ myhtml_url }}" class="btn btn-primary mt-3">See Profile</a>
-         </div>
+         <div class="loader" *ngIf="loader">Loading...</div>
       </div>
       <span class="alert alert-danger m-0 w-100 d-block" *ngIf="!profile_show">Please enter username</span>
    </form>
